added composer.lock to git

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ Homestead.json
 .idea/dictionaries
 .idea/vcs.xml
 .idea/jsLibraryMappings.xml
+.idea/misc.xml
 
 # Sensitive or high-churn files:
 .idea/dataSources.ids
