--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,7 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.1.*",
         "illuminate/html": "5.*",
-        "vinkla/hashids": "^2.2",
-        "barryvdh/laravel-debugbar": "^2.2"
+        "vinkla/hashids": "^2.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
